# admin-api-python-sdk

./: .pre-commit-config.yaml  Makefile  pyproject.toml
docs/: auth-sdk-design.md
src/admin_api/: __init__.py  exceptions.py
src/admin_api/grpc/: auth_service.py
src/admin_api/grpc/_generated/auth/: __init__.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
src/admin_api/grpc/_generated/permissions/: permissions_pb2.py  permissions_pb2.pyi  permissions_pb2_grpc.py
src/admin_api/grpc/_protos/auth/: auth.proto
src/admin_api/grpc/dto/: auth.py
src/admin_api/integrations/flask/: __init__.py  flask.py
src/admin_api/integrations/flask/decorators/: __init__.py  require.py
src/admin_api/permissions/: base.py  verifier.py
src/admin_api/sdk/: auth_context.py  auth_manager.py
tests/: test_smoke.py
