[project]
name = "admin-api-python-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladislav", email = "vladb539@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "admin_api"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B" ]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true


[tool.pytest.ini_options]
testpaths = ["tests"]
