[project]
name = "admin-api-python-sdk"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladislav", email = "vladb539@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "grpc-stubs>=1.53.0.6",
    "grpcio>=1.81.1",
    "protobuf>=6.33.6",
]

[project.optional-dependencies]
flask = [
    "flask>=3.1.3",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "admin_api"

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1",
    "mypy>=2.1.0",
    "mypy-protobuf>=5.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    '_generated'
]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B", "COM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path='src'
exclude = [
    "^src/admin_api/grpc/_generated/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
